Ajustes em Endereço e área de admin

--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -22,7 +22,7 @@
 
     <div class="field">
         <label asp-for="UserName" class=""></label>
-        <span asp-validation-for="UserName" class=""></span>
+        <span asp-validation-for="UserName" class="validação"></span>
         <input asp-for="UserName" class="" />
     </div>
 
