--- a/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
@@ -17,6 +17,7 @@
                 <a asp-area="Admin" asp-controller="AdminLanche" asp-action="Index">Gerenciar Lanches</a>
                 <a asp-area="Admin" asp-controller="AdminCategoria" asp-action="Index">Gerenciar Categorias</a>
                 <a asp-area="Admin" asp-controller="AdminPedido" asp-action="Index">Gerenciar Pedidos</a>
+                <a asp-area="Admin" asp-controller="AdminCupom" asp-action="Index">Gerenciar Cupons</a>
                 <a asp-area="" asp-controller="Home" asp-action="Index">Voltar para NcDonalds</a>
             </nav>
         </section>
