--- a/NcDonalds/Views/Account/AdicionarEndereco.cshtml
+++ b/NcDonalds/Views/Account/AdicionarEndereco.cshtml
@@ -59,7 +59,7 @@
     </div>
 
     <div class="submit-input">
-        <input type="submit" class="botao-cadastrar" value="Registrar" />
+        <input type="submit" class="botao-cadastrar" value="Enviar" />
     </div>
 
 </form>
