--- a/NcDonalds/Views/Account/Enderecos.cshtml
+++ b/NcDonalds/Views/Account/Enderecos.cshtml
@@ -10,7 +10,7 @@
 
 @if (Model.Count() > 0)
 {
-    <table class="table">
+    <table class="table text-white table-hover">
         <thead>
             <tr>
                 <th scope="col">Detalhe</th>
@@ -20,6 +20,7 @@
                 <th scope="col">Rua</th>
                 <th scope="col">Numero</th>
                 <th scope="col">Complemento</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +34,10 @@
                     <td> @endereco.Rua </td>
                     <td> @endereco.Numero </td>
                     <td> @endereco.Complemento </td>
+                    <td>
+                        <a asp-area="" asp-controller="Account" asp-action="UpdateEndereco" asp-route-enderecoId="@endereco.EnderecoId">Editar</a>
+                        <a asp-area="" asp-controller="Account" asp-action="RemoverEndereco" asp-route-enderecoId="@endereco.EnderecoId"> Remover</a>
+                    </td>
                 </tr>
             }
         </tbody>
