--- a/NcDonalds/Views/Account/UpdateEndereco.cshtml
+++ b/NcDonalds/Views/Account/UpdateEndereco.cshtml
@@ -62,7 +62,7 @@
     </div>
 
     <div class="submit-input">
-        <input type="submit" class="botao-cadastrar" value="Registrar" />
+        <input type="submit" class="botao-cadastrar" value="Enviar" />
     </div>
 
 </form>
