--- a/NcDonalds/Views/Shared/_LoginPartial.cshtml
+++ b/NcDonalds/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 
 @inject SignInManager<AppUser> SignInManager
 
+
 @if (SignInManager.IsSignedIn(User))
 {
     <div class="btn-group">
@@ -14,9 +15,16 @@
         </button>
         <ul class="dropdown-menu">
             <li><a asp-area="" asp-controller="Account" asp-action="Profile" class="dropdown-item">Perfil</a></li>
-            <li><a asp-area="" asp-controller="Account" asp-action="Enderecos" class="dropdown-item">Pedidos</a></li>
+            <li><a asp-area="" asp-controller="Account" asp-action="Pedidos" class="dropdown-item">Pedidos</a></li>
             <li><a asp-area="" asp-controller="Account" asp-action="Enderecos" class="dropdown-item">Endereços</a></li>
             <li><a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item">Sair</a></li>
+
+            @if (User.IsInRole("Admin"))
+            {
+                <li><hr class="dropdown-divider"></li>
+                <li><a asp-area="Admin" asp-controller="Admin" asp-action="Index" class="dropdown-item">Admin</a> </li>
+                <li><a asp-area="" asp-controller="Home" asp-action="Index" class="dropdown-item">NcDonald's</a> </li>
+            }
         </ul>
     </div>
 }
