Ajuste de migrações

--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Index.cshtml
@@ -28,7 +28,7 @@
                     <div id="@String.Concat("flush-collapse", categoria.CategoriaId)" class="accordion-collapse collapse" aria-labelledby="@String.Concat("flush-headingOne", categoria.CategoriaId)">
                         <div class="accordion-body text-dark">
                             <p>
-                                @Html.DisplayNameFor(model => categoria.Descricao):
+                                @Html.DisplayNameFor(model => categoria.Descricao)
                                 @Html.DisplayFor(model => categoria.Descricao)
                             </p>
                             <nav>
