Implementação de excluir endereço pré-cadastrado

--- a/NcDonalds/Views/Account/EditEndereco.cshtml
+++ b/NcDonalds/Views/Account/EditEndereco.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Update Endereco</h1>
 
-<form asp-area="" asp-controller="Account" asp-action="UpdateEndereco" method="post" class="inputs" role="form">
+<form asp-area="" asp-controller="Account" asp-action="EditEndereco" method="post" class="inputs" role="form">
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
