--- a/NcDonalds/Views/Account/Enderecos.cshtml
+++ b/NcDonalds/Views/Account/Enderecos.cshtml
@@ -6,42 +6,62 @@
 
 <h2> Endereços </h2>
 
-<a class="button-admin" asp-area="" asp-controller="Account" asp-action="AdicionarEndereco"> Adicionar Endereço </a>
+<a class="botao-cadastrar" style="margin:20px 0; display:inline-block" asp-area="" asp-controller="Account" asp-action="AdicionarEndereco"> Adicionar Endereço </a>
 
 @if (Model.Count() > 0)
 {
-    <table class="table text-white table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Detalhe</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Cidade</th>
-                <th scope="col">Bairro</th>
-                <th scope="col">Rua</th>
-                <th scope="col">Numero</th>
-                <th scope="col">Complemento</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var endereco in Model)
-            {
-                <tr>
-                    <th> @endereco.Detalhe </th>
-                    <td> @endereco.Estado </td>
-                    <td> @endereco.Cidade </td>
-                    <td> @endereco.Bairro </td>
-                    <td> @endereco.Rua </td>
-                    <td> @endereco.Numero </td>
-                    <td> @endereco.Complemento </td>
-                    <td>
-                        <a asp-area="" asp-controller="Account" asp-action="UpdateEndereco" asp-route-enderecoId="@endereco.EnderecoId">Editar</a>
-                        <a asp-area="" asp-controller="Account" asp-action="RemoverEndereco" asp-route-enderecoId="@endereco.EnderecoId"> Remover</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="accordion" id="accordionFlushExample">
+
+        @foreach (var endereco in Model)
+        {
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="@String.Concat("flush-headingOne", endereco.EnderecoId)">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#@String.Concat("flush-collapse", endereco.EnderecoId)" aria-expanded="false" aria-controls="@String.Concat("flush-collapse", endereco.EnderecoId)">
+                        <p>
+                            <span>@endereco.Detalhe</span>
+                        </p>
+                    </button>
+                </h2>
+
+                <div id="@String.Concat("flush-collapse", endereco.EnderecoId)" class="accordion-collapse collapse" aria-labelledby="@String.Concat("flush-headingOne", endereco.EnderecoId)">
+                    <div class="accordion-body text-dark">
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Cep):
+                            @Html.DisplayFor(model => endereco.Cep)
+                        </p>
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Estado):
+                            @Html.DisplayFor(model => endereco.Estado)
+                        </p>
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Cidade):
+                            @Html.DisplayFor(model => endereco.Cidade)
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Bairro):
+                            @Html.DisplayFor(model => endereco.Bairro)
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Rua):
+                            @Html.DisplayFor(model => endereco.Rua)
+                        </p>
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Numero):
+                            @Html.DisplayFor(model => endereco.Numero)
+                        </p>
+                        <p>
+                            @Html.DisplayNameFor(model => endereco.Complemento):
+                            @Html.DisplayFor(model => endereco.Complemento)
+                        </p>
+                        <nav>
+                            <ul>
+                                <li><a class="text-dark" asp-action="EditEndereco" asp-route-id="@endereco.EnderecoId">Editar</a></li>
+                                <li><a class="text-dark" asp-action="RemoverEndereco" asp-route-id="@endereco.EnderecoId">Excluit </a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 }
 else
 {
