--- a/NcDonalds/Views/Lanche/List.cshtml
+++ b/NcDonalds/Views/Lanche/List.cshtml
@@ -10,7 +10,7 @@
 
 @foreach (var lanche in Model.Lanches)
 {
-    if (lanche.EmEstoque)
+    if (lanche.EmEstoque && lanche.CategoriaId == 1)
     {
         @await Html.PartialAsync("_LancheResumo", lanche);
     }
