--- a/NcDonalds/Views/Lanche/List.cshtml
+++ b/NcDonalds/Views/Lanche/List.cshtml
@@ -4,7 +4,22 @@
     ViewData["Title"] = "Lanches";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<nav class="nav-principal">
+    <ul class="container-row">
+        <li>
+            <a>Lanches</a>
+        </li>
+        <li>
+            <a>Sobremesas</a>
+        </li>
+        <li>
+            <a>Sorvetes</a>
+        </li>
+        <li>
+            <a>Bebidas</a>
+        </li>
+    </ul>
+</nav>
 <h2 class="title-lanches"> @Model.CategoriaAtual </h2>
 
 
