--- a/NcDonalds/wwwroot/css/userProfile.css
+++ b/NcDonalds/wwwroot/css/userProfile.css
@@ -26,5 +26,5 @@
     border-radius: 999px;
     background-color: var(--amarelo);
     border: 3px solid var(--amarelo);
-    color: var(--preto);
+    color: white;
 }
