--- a/NcDonalds/Views/Shared/Account/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/Account/_Layout.cshtml
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NcDonalds</title>
     <partial name="Account/_Stylus" />
-
+    <link rel="shortcut icon" href="~/images/Logo.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
