--- a/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NcDonalds</title>
-
+    <link rel="shortcut icon" href="~/images/Logo.png" />
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
