--- a/NcDonalds/Views/Pedido/Checkout.cshtml
+++ b/NcDonalds/Views/Pedido/Checkout.cshtml
@@ -8,10 +8,32 @@
 
 <h1>Checkout</h1>
 
-<button onclick="getEnderecos()">sasasasa</button>
+<div class="form-entrega">
 
+    <h2> Tipo de entrega </h2>
 
-<div>
+    <div class="form-check">
+        <input asp-for="tipoEntrega" class="form-check-input" type="radio" name="tipoEntrega" id="flexRadioDefault1 entrega" value="Entrega">
+        <label asp-for="tipoEntrega" class="form-check-label" id=""> Entrega </label>
+    </div>
+
+    <div class="form-check">
+        <input onclick="getEnderecos()" asp-for="tipoEntrega" class="form-check-input" type="radio" name="tipoEntrega" id="flexRadioDefault1" value="Retirar no local">
+        <label asp-for="tipoEntrega" class="form-check-label" onclick="getEnderecos()"> Retirada </label>
+    </div>
+    <span asp-validation-for="tipoEntrega"></span>
+</div>
+
+<div id="form-entrega" style="display: none">
+
+    @foreach (var endereco in Model.enderecos)
+    {
+        <button > @endereco.Detalhe </button>
+    }
+
+</div>
+
+<div style="margin-top: 300px">
     <div class="field">
 
         <label class="">Cupom</label>
@@ -24,6 +46,8 @@
         <input type="submit" class="botao-cadastrar" value="Validar Cupom" onclick="validarCupom(@Model.cupom.CodigoCupom)" />
     </div>
 </div>
+
+
 
 <form method="post" role="form" class="">
 
@@ -43,22 +67,6 @@
             <label asp-for="formaPagamento" class="form-check-label">Cartão</label>
         </div>
 
-        <span asp-validation-for="tipoEntrega"></span>
-    </div>
-
-    <div class="form-entrega">
-
-        <h2> Tipo de entrega </h2>
-
-        <div class="form-check">
-            <input asp-for="tipoEntrega" class="form-check-input" type="radio" name="tipoEntrega" id="flexRadioDefault1" value="Entrega">
-            <label asp-for="tipoEntrega" class="form-check-label"> Entrega </label>
-        </div>
-
-        <div class="form-check">
-            <input asp-for="tipoEntrega" class="form-check-input" type="radio" name="tipoEntrega" id="flexRadioDefault1" value="Retirar no local">
-            <label asp-for="tipoEntrega" class="form-check-label" onclick="getEnderecos()"> Retirada </label>
-        </div>
         <span asp-validation-for="tipoEntrega"></span>
     </div>
 
