Alterações no Pedidos e Endereços

--- a/NcDonalds/Views/Account/AdicionarEndereco.cshtml
+++ b/NcDonalds/Views/Account/AdicionarEndereco.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Endereços";
 }
 
-<h1>Adicionar Endereco</h1>
+<h1 style="padding: 20px;font-size: 1.2rem;margin: 0px 150px;">Adicionar Endereço:</h1>
 
 <form asp-area="" asp-controller="Account" asp-action="AdicionarEndereco" method="post" class="inputs" role="form">
 
