--- a/NcDonalds/Views/Account/Pedidos.cshtml
+++ b/NcDonalds/Views/Account/Pedidos.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Pedidos";
 }
 
-<h1>Pedidos</h1>
+<h1 style="font-size: 1.5rem;padding: 0px 8px;">Pedidos:
+</h1>
 
 <table class="table text-white table-hover">
     <thead>
