--- a/NcDonalds/Views/Account/Enderecos.cshtml
+++ b/NcDonalds/Views/Account/Enderecos.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Enderecos";
 }
 
-<h2> Endereços </h2>
+<h2 style="padding: 20px; font-size: 1.2rem;"> Endereços </h2>
 
-<a class="botao-cadastrar" style="margin:20px 0; display:inline-block" asp-area="" asp-controller="Account" asp-action="AdicionarEndereco"> Adicionar Endereço </a>
+<a class="botao-cadastrar" style="margin:20px; display:inline-block" asp-area="" asp-controller="Account" asp-action="AdicionarEndereco"> Adicionar Endereço </a>
 
 @if (Model.Count() > 0)
 {
@@ -54,7 +54,7 @@
                         <nav>
                             <ul>
                                 <li><a class="text-dark" asp-action="EditEndereco" asp-route-id="@endereco.EnderecoId">Editar</a></li>
-                                <li><a class="text-dark" asp-action="RemoverEndereco" asp-route-id="@endereco.EnderecoId">Excluit </a></li>
+                                <li><a class="text-dark" asp-action="RemoverEndereco" asp-route-id="@endereco.EnderecoId">Excluir </a></li>
                             </ul>
                         </nav>
                     </div>
@@ -65,6 +65,6 @@
 }
 else
 {
-    <h2> Nenhum Endereço cadastrado </h2>
+    <h2 style="padding: 20px; font-size: 1.2rem;"> Nenhum Endereço Cadastrado </h2>
 }
 
