--- a/NcDonalds/Views/Account/Profile.cshtml
+++ b/NcDonalds/Views/Account/Profile.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <div class="submit-input">
-        <input type="submit" class="botao-entrar" value="editar" />
+        <input type="submit" class="botao-entrar" value="Editar" />
     </div>
 
 </form>
