--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Create.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Create.cshtml
@@ -17,7 +17,7 @@
         </section>
 
 
-        <form asp-area="Admin" asp-controller="AdminLanche" asp-action="Create" method="post" class="inputs" role="form">
+        <form asp-area="Admin" asp-controller="AdminLanche" asp-action="Create" method="post" class="inputs" role="form" enctype="multipart/form-data">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
