ajustando tela de resumo

--- a/NcDonalds/Views/Account/Register.cshtml
+++ b/NcDonalds/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section navMessage{
-    <a class="title-account" asp-controller="Account" asp-action="Login" style="color:white">Já Tem Registro?</a>
+    <a class="title-account" asp-controller="Account" asp-action="Login" style="color:white">Já tem uma conta?</a>
     <a class="title-account login-button" asp-controller="Account" asp-action="Login" >Entrar</a>
 }
 
