--- a/NcDonalds/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     </a>
                    
                     <li>
-                        <a asp-controller="Home" asp-action="Index">Ínicio</a>
+                        <a asp-controller="Home" asp-action="Index">Início</a>
                     </li>
                     <li>
                         <a asp-controller="Home" asp-action="Contato">Contato</a>
