--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Create.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Create.cshtml
@@ -51,7 +51,7 @@
             </div>
 
             <div class="field">
-                <input type="hidden" asp-for="EmEstoque" />
+                <input type="hidden" asp-for="EmEstoque" value="1"/>
             </div>
 
             <div class="field">
