Alterações nas imagens

--- a/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="content">
 
         <section>
-            <img class="img-action" src="~/images/admin.svg" />
+            <img class="img-action" src="~/images/Lanches/food.svg" />
         </section>
 
         <section>
