--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
@@ -50,7 +50,7 @@
             </div>
 
             <div class="field">
-                <input type="hidden" asp-for="EmEstoque" />
+                <input asp-for="EmEstoque" />
             </div>
 
             <div class="field">
