Ajuste em lanche Edit

--- a/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminLanche/Edit.cshtml
@@ -50,6 +50,7 @@
             </div>
 
             <div class="field">
+                <label asp-for="EmEstoque" class=""></label>
                 <input asp-for="EmEstoque" />
             </div>
 
