--- a/NcDonalds/Views/Pedido/Checkout.cshtml
+++ b/NcDonalds/Views/Pedido/Checkout.cshtml
@@ -13,7 +13,7 @@
     <h2> Tipo de entrega </h2>
 
     <div class="form-check">
-        <input onclick="getUserEndereco()" asp-for="tipoEntrega" class="form-check-input" type="radio" name="tipoEntrega" id="flexRadioDefault1" value="Entrega">
+        <input onclick="getUserEndereco()" asp-for="tipoEntrega" class="form-check-input entrega-type" type="radio" name="tipoEntrega" id="flexRadioDefault1" value="Entrega">
         <label asp-for="tipoEntrega" class="form-check-label" id=""> Entrega </label>
     </div>
 
